@@ -11,16 +11,19 @@
 #ifndef __DIFX_MESSAGE_INTERNAL_H__
 #define __DIFX_MESSAGE_INTERNAL_H__
 
-#define MAX_DIFX_MESSAGE_IDENTIFER 128
+#include "../difxmessage.h"
 
 extern char difxMessageGroup[16];
 extern int difxMessagePort;
-extern char difxMessageIdentifier[MAX_DIFX_MESSAGE_IDENTIFER];
-extern char difxMessageHostname[32];
+extern char difxMessageIdentifier[DIFX_MESSAGE_IDENTIFER_LENGTH];
+extern char difxMessageHostname[DIFX_MESSAGE_PARAM_LENGTH];
 extern int difxMessageMpiProcessId;
 extern char difxMessageXMLFormat[256];
+extern char difxMessageXMLParamFormat[256];
 extern int difxMessageSequenceNumber;
-extern char difxBinaryGroup[16];
-extern int difxBinaryPort;
+extern char difxBinarySTAGroup[16];
+extern int difxBinarySTAPort;
+extern char difxBinaryLTAGroup[16];
+extern int difxBinaryLTAPort;
 
 #endif
