@@ -16,3 +16,7 @@ Add table (enum) of error levels
 Rename ERROR to ALERT
 Binary message sending, intended for Short Term Accumations (STAs)
 Don't assume default PORT and GROUP
+Add DifxMessageParameter type
+  Note: mpiid is a target parameter for this message type, not a source parameter
+Started implementing DifxMessageStart 
+Started distinguishing between STA and LTA types
